Add Java project for annotation processor.

--- a/multiloader-sample/build.gradle
+++ b/multiloader-sample/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 20
@@ -21,5 +22,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    apt project(':multiloader-compiler')
     compile project(':multiloader')
 }
