--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':multiloader', ':multiloader-sample', ':multiloader-compiler'
+include ':multiloader', ':multiloader-compiler', ':multiloader-sample'
